--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=employeemanagement-swagger
 server.port= 8081
 
 # Data base connection
-spring.datasource.url=jdbc:mysql://localhost:3306/employeerepo?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/employeerepo
 spring.datasource.username=Teste
 spring.datasource.password=Teste@123
 
